# napi-pcsclite

./: .gitignore  CMakeLists.txt  LICENSE  README.md  binding.gyp  hello.c  hello.cpp  hello.js  package.json  pcscbinding.cpp  pcscbinding.h  pcsclite.cpp  pcsclite.h  pcsclite.js  pcscreader.cpp  pcscreader.h
.github/workflows/: ci.yml
examples/: asyncAPI.js  eventAPI.js  syncAPI.js
src/: pcscbinding.c  pcscbinding.cpp  pcscbinding.h  pcsclite.c  pcsclite.cpp  pcsclite.h
tests/: test_export.js
